@@ -1,4 +1,7 @@
 
+ o new module Leaderlist to compute the leader list algorithm (see the Dragon)
+   (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)
+
 version 1.8.1, October 17, 2011
 -------------------------------
  o module Gmap now has a signature for edges (E_SRC) compatible with
